--- a/web lab/lab.html
+++ b/web lab/lab.html
@@ -8,6 +8,8 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 
 <body>
@@ -27,8 +29,8 @@
         </div>
     </div>
     <hr>
-<div class="table">
-    <table class="table table-striped table-bordered table-hover">
+    <div class="table">
+        <table class="table table-striped table-bordered table-hover">
             <thead>
                 <tr>
                     <th>No</th>
@@ -66,24 +68,73 @@
 
                 </tr>
             </tbody>
-    </table>
-</div>
-<hr>
-<div class="image">
-    <div class="container">
-        <h1 class="text-center">Images</h1>
-        <center>
-        <img src="https://th.bing.com/th/id/OIP.breLqKXa9ieQ5kJynV8kbwHaFS?w=231&h=180&c=7&r=0&o=5&pid=1.7" class="rounded float-start" width="300px" alt="">
-        <img src="https://th.bing.com/th/id/OIP.Pf8t8ur-lkM_Hv1vkqPhIgHaGj?w=205&h=182&c=7&r=0&o=5&pid=1.7" class="img-thumbnail" width="300px" alt="">
-        <img src="https://th.bing.com/th/id/OIP.LXDWgeM5sUhwuNplU58xDwHaGL?w=232&h=194&c=7&r=0&o=5&pid=1.7" class="rounded float-end" width="300px" alt="">
-        </center>
+        </table>
+    </div>
+    <hr>
+    <div class="image">
+        <div class="container">
+            <h1 class="text-center">Images</h1>
+            <center>
+                <img src="https://th.bing.com/th/id/OIP.breLqKXa9ieQ5kJynV8kbwHaFS?w=231&h=180&c=7&r=0&o=5&pid=1.7"
+                    class="rounded float-start" width="300px" alt="">
+                <img src="https://th.bing.com/th/id/OIP.Pf8t8ur-lkM_Hv1vkqPhIgHaGj?w=205&h=182&c=7&r=0&o=5&pid=1.7"
+                    class="img-thumbnail" width="300px" alt="">
+                <img src="https://th.bing.com/th/id/OIP.LXDWgeM5sUhwuNplU58xDwHaGL?w=232&h=194&c=7&r=0&o=5&pid=1.7"
+                    class="rounded float-end" width="300px" alt="">
+            </center>
         </div>
-</div>
+    </div>
+    <hr>
+    <div class="container">
+        <h1 class="text-center">Alert</h1>
+        <div class="alert alert-primary" role="alert">
+            primary aler
+        </div>
+        <div class="alert alert-secondary" role="alert">
+            secondary alert
+        </div>
+        <div class="alert alert-success" role="alert">
+            success alert
+        </div>
+        <div class="alert alert-danger" role="alert">
+            danger alert
+        </div>
+        <div class="alert alert-warning" role="alert">
+            warning alert
+        </div>
+        <div class="alert alert-info" role="alert">
+            info alert
+        </div>
+        <div class="alert alert-light" role="alert">
+            light alert
+        </div>
+        <div class="alert alert-dark" role="alert">
+            dark alert
+        </div>
+    </div>
+    </div>
+    <hr>
+    <div class="container">
+        <h1 class="text-center">buttons</h1>
+        <button class="btn btn-primary">Primary</button>
+        <button class="btn btn-danger">Danger</button>
+        <button class="btn btn-info">Info</button>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 </body>
+<hr>
+
+<div class="container">
+    <h1 class="text-center">bootstrap icon</h1>
+    <h1><i class="bi bi-android2 text-danger"></i></h1>
+    <h4><i class="bi bi-android2"></i></h4>
+    <button class="btn btn-primary"><i class="bi bi-code-slash"></i> Coding</button>
+    <button class="btn btn-danger"><i class="bi bi-wifi"> wifi</i></button>
+</div>
+
 
 </html>
