--- a/web lab/lab.html
+++ b/web lab/lab.html
@@ -135,6 +135,10 @@
     <button class="btn btn-primary"><i class="bi bi-code-slash"></i> Coding</button>
     <button class="btn btn-danger"><i class="bi bi-wifi"> wifi</i></button>
 </div>
+<hr>
+<div class="container">
+
+</div>
 
 
 </html>
